<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/travelhistory"
    tools:context=".travelHistory">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp"
        android:background="@drawable/custom_editing">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Travel History"
                android:id="@+id/travelhistory"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/destination"
                android:background="@drawable/custom_editing"

                android:drawablePadding="8dp"
                android:hint="Destination"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter text in the format: Place, State, Country"
                />


            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/addPlace"
                android:text="Add "
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/black"
                app:cornerRadius = "20dp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:text="Place: " />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/responses2"
                android:layout_marginTop="10dp"
                android:text="The response is: "
                android:textColor="@color/black"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/showPlaces"
        android:text="Show Places"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/black"
        app:cornerRadius = "20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/showingPlaces"
        android:background="@color/white"
        android:text="Places visited are:  "/>


</LinearLayout>

