<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:layout_gravity="center">

    <!-- Announcement CardView at the top -->
    <androidx.cardview.widget.CardView
        android:id="@+id/announcement_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_editing">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ban User"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textAlignment="center"
            android:padding="20dp"/>
    </androidx.cardview.widget.CardView>

    <!-- Main content area containing EditText and Send Button -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_editing">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/announce_text"
                android:padding="10dp"
                android:background="@drawable/custom_editing"
                android:layout_marginTop="16dp"
                android:text=""
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:hint="Username"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/get"
                android:text="View"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:textSize="15dp"
                android:padding="10dp"
                android:backgroundTint="@color/black"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Ban_user"
                android:text="Ban"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:textSize="15dp"
                android:padding="10dp"
                android:backgroundTint="@color/black"
                />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/Container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!-- Friend items will be dynamically added here -->
                </LinearLayout>
            </ScrollView>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/user_ban"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="@color/black"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            android:text="Exit"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:textSize="15dp"
            android:padding="5dp"
            android:backgroundTint="@color/black"
            />
    </LinearLayout>
</LinearLayout>
